# renkuflow

./: .gitignore  LICENSE  README.md  pyproject.toml
convolinear/: __init__.py  signal.py  spectrum.py
examples/: demo.py
tests/: test_signal.py
